# vtu_result_scraper

./: main.py  pyproject.toml  requirements.txt  vtu_scraper.py
static/: script.js
