[project]
name = "vtu_result_scraper"
version = "0.1.0"
description = "Flask app for VTU result scraping and Gemini API integration"
requires-python = ">=3.10"

dependencies = [
  "flask==3.1.2",
  "flask-cors==6.0.1",
  "python-dotenv==0.19.2",
  "requests==2.32.5",
  "beautifulsoup4==4.13.5",
  "pandas==2.3.2",
  "urllib3==2.5.0",
  "google-genai==1.41.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
